# boiler-room

./: .gitignore  .gitmodules  .projectile  CMakeLists.txt
lib/: CMakeLists.txt
lib/game/: CMakeLists.txt
lib/game/src/: editorpart.cpp  editorpart.h  gamepart.cpp  gamepart.h
shaders/: compile.bat  compile.sh  debug.frag  debug.vert  deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert  glyph.frag  header.frag  header.vert  skybox.frag  skybox.vert  ui.frag  ui.vert
shaders/gl/: shader.frag  shader.geom  shader.tesc  shader.tese  shader.vert
src/: listviewdestination.cpp  listviewdestination.h  main.cpp  main_game.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwindow.cpp  openglwindow.h
src/ui/models/: assetitemmodel.cpp  assetitemmodel.h  loglistmodel.cpp  loglistmodel.h  logtablemodel.cpp  logtablemodel.h  treeitem.h
